@@ -32,7 +32,7 @@
 #import "ShareableBitmap.h"
 #import "WebPageProxy.h"
 #import "WebProcessProxy.h"
-#import <WebCore/CALayerWebAdditions.h>
+#import <WebCore/WebCoreCALayerExtras.h>
 #import <WebCore/PlatformLayer.h>
 #import <WebKitSystemInterface.h>
 
