@@ -1,5 +1,15 @@
 2014-01-21  Tim Horton  <timothy_horton@apple.com>
 
+        Address late review naming comments after r162453.
+
+        * UIProcess/API/mac/WKView.mm:
+        And, fix the build by adding an include I accidentally missed.
+
+        * UIProcess/mac/RemoteLayerTreeHost.mm:
+        * WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:
+
+2014-01-21  Tim Horton  <timothy_horton@apple.com>
+
         Keep CALayer implicit animation disabling code in a single place
         https://bugs.webkit.org/show_bug.cgi?id=127355
 
